libs/bng/test/negative/N1000_weird_unexpected_undefined.bngl
# model uses expressions, this is not supported yet 
# error: syntax error, unexpected $undefined, expecting end
# 

begin model
begin parameters
	ITERATIONS  10
	#TIME_STEP  1e-6
	VACANCY_SEARCH_DISTANCE  10
	
    MCELL_DIFFUSION_CONSTANT_3D_A 1e-6
    MCELL_DIFFUSION_CONSTANT_3D_B 5e-5
    
    MCELL_NO_COMPARTMENT_SIZE 1/16#1 #1/16
end parameters

begin molecule types
	A(a~S~R)
	B(b~T~U)
end molecule types

#begin seed species
#	 A(a~S)  10
#	 B(b~T)  10
#end seed species

#begin observables
#	Molecules _MDLString A, B
#end observables

begin reaction rules
	A(a~S) + B(b~T) -> A(a~R!1).B(b~T!1) 1E9
end reaction rules
end model
